# formulac

./: Cargo.toml  README.md
benches/: benches.rs
src/: astnode.rs  builder.rs  constants.rs  core.rs  err.rs  functions.rs  lexer.rs  lib.rs  operators.rs  parser.rs  rpn.rs  token.rs  variable.rs
src/functions/: buildin.rs  core.rs  custom.rs
