[package]
name = "formulac"
version = "0.3.0"
edition = "2024"
authors = ["KATOI4423 <katoi4423@gmail.com>"]
description = "A complex-number and extensible function supported math expression parser for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KATOI4423/formulac.git"
readme = "README.md"
keywords = ["math", "parser", "complex", "expression", "formula"]
categories = ["parsing", "science", "mathematics"]

[dependencies]
num-complex = "0.4.6"
phf = "0.13.1"
phf_macros = "0.13.1"

[dev-dependencies]
approx = "0.5.1"
